# KakoVerse

./: .gitignore  Crisis_Constitution.json  Crisis_Empathy_12.json  Crisis_Safety_Rules.yaml  Makefile  README.md  pyproject.toml
Artifacts/: city_distribution.csv  conversation_age_distribution.csv  conversation_category_by_decade.csv  conversation_category_distribution.csv  conversation_schedule.json  crisis_category_plan.json  crisis_profile_categories_by_decade.csv  crisis_profile_categories_overall.csv  persona_plan.json  presenting_problem_distribution.csv
Artifacts/conversations/: seeker_auto_001.json  seeker_auto_002.json  seeker_auto_003.json  seeker_auto_004.json  seeker_auto_005.json  seeker_auto_006.json  seeker_auto_007.json  seeker_auto_008.json  seeker_auto_009.json  seeker_auto_010.json  seeker_auto_011.json  seeker_auto_012.json  seeker_auto_013.json  seeker_auto_014.json  seeker_auto_015.json  seeker_auto_016.json  (+14 more)
Configs/: Crsis_Reward_Config.json
Prompts/: Kakoverse_Global_Cities_1920s_2020s.csv  Seeker_Persona_Card.json  Seeker_System_Prompt.json  Supporter_System_Prompt.json
Scripts/: Interfaces.py  Reward.py  analyze_conversations.py  analyze_crisis_profiles.py  analyze_presenting_problems.py  generate_conversations.py  generate_conversations.py.bak  generate_crisis_category_plan.py  generate_crisis_profiles.py  generate_persona_cards.py  generate_persona_cards.py.bak  generate_persona_plan.py  postprocess_conversations.py  probe_openrouter_rate_limits.py  publish_to_hf.py  visualize_city_distribution.py
gradio_app/: app.py
(+210 files in other folders)
