[project]
name = "vf-crisissupport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.5.post0",
    "google-generativeai>=0.6.0",
    "groq>=0.8.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.35.3",
    "gradio>=4.44.0",
    "python-dotenv>=1.0.1",
]
